# tmflow-dsl

./: README.md  test-simple-variables.js  test-variables.js
TradeFlow/: .gitignore  example.js  generator.js  test-conditionallogic.js  test-variable.js
TradeFlow/js-version/: README.md  dsl-converter.js  package.json  parser.test.js
TradeFlow/rust-version/src/: lexer.rs  lib.rs  main.rs  parser.rs  test_examples.rs
js-version/: executor.js  lexer.js  test-concatenation.js  test-variables.js  validator.js
rust-version/: Cargo.toml  README.md  build-wasm.sh
rust-version/src/: ast.rs  executor.rs  lexer.rs  lib.rs  main.rs  parser.rs  test_examples.rs
src/: index.js  lexer.js  parser.js
